style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  font-family: "Roboto Condensed", sans-serif;
}

body {
  color: #333;
  background: #fff;
  line-height: 1.6;
  text-align: left;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  padding: 1em 0;
}

.header-name-container {
  width: 100%;
  display: flex;
  justify-content: flex;
}
.navbar input[type="checkbox"],
.navbar .hamburger-lines {
  display: none;
}

.navbar {
  position: fixed;
  width: 100%;
  background: #fff;
  color: #000;
  opacity: 0.95;
  height: 50px;
  z-index: 12;
}

.navbar-container {
  display: flex;
  justify-content: space-between;
  height: 64px;
  align-items: center;
}

.nav-links {
  order: 2;
  display: flex;
  gap: 1.5rem;
  padding-right: 1.5rem;
}

.nav-links li {
  list-style: none;
  margin-left: 1.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.2rem;
}

.nav-links a {
  text-decoration: none;
  color: #444;
  font-weight: 500;
  transition: color 0.3s ease-in-out;
}

.nav-links a:hover {
  color: #117964;
}

section {
  padding: 4em 2em;
  max-width: 1000px;
  margin: auto;
}

.logo {
  order: 1;
  font-size: 2.3rem;
  margin-bottom: 0.5rem;
}

.hero {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  text-align: left;
  width: 100vw;
  max-width: 100vw;
  margin-left: calc(50% - 50vw);
  margin-right: calc(50% - 50vw);
  min-height: 400px;
  padding: 2em 0;
  background: #fff;
}

.hero h2 {
  font-size: 4em;
  font-weight: 100;
  text-align: center;
  margin-left: 10px;
}

.hero img {
  width: 400px;
  height: auto;
  position: static;
  margin-bottom: 0;
  margin-left: 2em;
}

.carousel {
  margin: 0 auto;
  pad: 20px 0;
  overflow: hidden;
  display: flex;
  background-color: #333;
  > * {
    flex: 0 0 100%
  }
}

.carousel-group {
  display: flex;
  gap: 20px;
  padding-right: 20px;
  will-change: transform;
  animation: scrolling 40s linear infinite;
}

@keyframes scrolling {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

.card {
  display: flex;
  align-items: center;
  justify-content: center;
  white-space: nowrap;           /* Prevent text wrapping */
  width: 350px;                  /* Adjust width as needed for your longest text */
  min-height: 80px;              /* Adjust height for vertical centering */
  color: white;
  padding: 0 24px;               /* Horizontal padding for breathing room */
  font-size: 1.4em;
  font-weight: 600;
  background-color: #333;
  margin: 0 10px;
  text-align: center;
}

#about {
  display: flex;
  justify-content: flex-end;
}

.about-text {
  max-width: 50%;
}

.cta {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 2em;
  margin-bottom: 20px;
}

.btn {
  display: flex;
  justify-content: center;
  align-items: center;;
  padding: 1em 2em;
  color: black;
  text-decoration: none;
  border-style: solid;
  border-radius: 5px;
  border-color: #000;
  border-width: 2px;
}

footer {
  text-align: center;
  padding: 2em;
  background: #f5f5f5;
}
/* nav for small screens */
@media (max-width: 768px) {
  .navbar {
    opacity: 0.95;
  }

  .navbar-container input[type="checkbox"],
  .navbar-container .hamburger-lines {
    display: block;
  }

  .navbar-container {
    display: block;
    position: relative;
    height: 64px;
  }

  .navbar-container input[type="checkbox"] {
    position: absolute;
    display: block;
    height: 32px;
    width: 30px;
    top: 20px;
    left: 20px;
    z-index: 5;
    opacity: 0;
  }

  .navbar-container .hamburger-lines {
    height: 23px;
    width: 35px;
    position: absolute;
    top: 17px;
    left: 20px;
    z-index: 2;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  .navbar-container .hamburger-lines .line {
    height: 4px;
    width: 100%;
    border-radius: 10px;
    background: #333;
  }

  .navbar-container .hamburger-lines .line1 {
    transform-origin: 0% 0%;
    transition: transform 0.4s ease-in-out;
  }

  .navbar-container .hamburger-lines .line2 {
    transition: transform 0.2s ease-in-out;
  }

  .navbar-container .hamburger-lines .line3 {
    transform-origin: 0% 100%;
    transition: transform 0.4s ease-in-out;
  }

  .navbar .nav-links {
    padding-top: 100px;
    background: #fff;
    height: 50vh;
    max-width: 300px;
    transform: translate(-150%);
    display: flex;
    flex-direction: column;
    margin-left: -40px;
    padding-left: 50px;
    transition: transform 0.5s ease-in-out;
    box-shadow: 5px 0px 10px 0px #aaa;
  }

  .navbar .nav-links li {
    margin-bottom: 1.5rem;
    font-size: 1.3rem;
    font-weight: 500;
  }

  .navbar-container input[type="checkbox"]:checked ~ .nav-links {
    transform: translateX(0);
  }

  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
    transform: rotate(35deg);
  }

  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
    transform: scaleY(0);
  }

  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
    transform: rotate(-35deg);
  }

  .logo {
    position: absolute;
    top: 5px;
    right: 15px;
    font-size: 2rem;
  }
}

/* contact form styling */
.row {
  display: flex;
  flex-wrap: wrap;
  margin-right: -15px;
  margin-left: -15px;
}
.justify-content-center {
  justify-content: center !important;
}
.wrapper {
  width: 100%;
  overflow: hidden;
  border-radius: 5px;
}
.img {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center; 
  border-radius: 5px;
}
.contactForm .label{
  color: #000;
  text-transform: uppercase;
  font-size: 12px;
  font-weight: 600;
}
label {
  display: inline-block;
  margin-bottom: 0.5rem;
}
.p-4 {
  padding: 1.5rem;
}
.w-100 {
  width: 100%;
}
.mb-4 {
  margin-bottom: 1.5rem;
}
h3 {
  font-size: 1.75rem;
}
.contactForm .form-group:last-child {
  margin-top: 2em;
}

